Reorganize project structure, integrate swagger to webapi.

--- a/PuzzleBase.Web/Pages/Index.razor
+++ b/PuzzleBase.Web/Pages/Index.razor
@@ -1,3 +1,13 @@
 ﻿@page "/"
+@inherits CodeBehind.IndexBase
 
 <h1>Welcome to PuzzleBase ^^</h1>
+
+@if (Puzzles == null)
+{
+    <img src="~/img/loading.gif" alt="Loading..." />
+}
+else
+{
+    <div>We have @Puzzles.Count puzzle(s).</div>
+}
