Prepare sudoku boxes. Create content models. Add favicon.

--- a/PuzzleBase.Web/Pages/Index.razor
+++ b/PuzzleBase.Web/Pages/Index.razor
@@ -5,7 +5,7 @@
 
 @if (Puzzles == null)
 {
-    <img src="~/img/loading.gif" alt="Loading..." />
+    <img class="loading-gif" src="img/loading.gif" alt="Loading..." />
 }
 else
 {
