--- a/PuzzleBase.Web/Pages/_Host.cshtml
+++ b/PuzzleBase.Web/Pages/_Host.cshtml
@@ -10,9 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PuzzleBase</title>
     <base href="~/" />
+    <link rel="shortcut icon" type="image/png" href="img/icon.png" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="scss/Index.scss" />
     <link rel="stylesheet" href="_content/PuzzleBase.Components/scss/PuzzleTile.scss" />
+    <link rel="stylesheet" href="_content/PuzzleBase.Components/scss/PuzzleComponent.scss" />
 </head>
 <body>
     <app>
