Allow digit placement using the mouse.

--- a/PuzzleBase.Components/PuzzleBox.razor
+++ b/PuzzleBase.Components/PuzzleBox.razor
@@ -25,7 +25,8 @@
 
                 <div class="helper" id="helper-@i"
                      @onmouseover="() => Helper_MouseOver(digit)"
-                     @onmouseout="Helper_MouseOut"></div>
+                     @onmouseout="Helper_MouseOut"
+                     @onclick="() => Helper_Click(digit)"></div>
             }
         </div>
     </div>
