--- a/PuzzleBase.Components/PuzzleBox.razor
+++ b/PuzzleBase.Components/PuzzleBox.razor
@@ -12,10 +12,12 @@
         ? "boundary-south" : string.Empty;
     var boundaryWest = (Boundary & BoundaryBitmask.West) != BoundaryBitmask.None
         ? "boundary-west" : string.Empty;
+
+    var conflicted = IsConflicted ? "conflicted" : string.Empty;
 }
 
 <td>
-    <div class="box @given @boundaryNorth @boundaryEast @boundarySouth @boundaryWest" id="box-@ID">
+    <div class="box @given @boundaryNorth @boundaryEast @boundarySouth @boundaryWest @conflicted" id="box-@ID">
         <div class="value">@Value</div>
         <div class="helper-value">@HelperValue</div>
         <div class="helpers">
