Add polymorphic json support for puzzle constraints.

--- a/PuzzleBase.Components/PuzzleBox.razor
+++ b/PuzzleBase.Components/PuzzleBox.razor
@@ -18,7 +18,10 @@
 }
 
 <td>
-    <div class="box @given @boundaryNorth @boundaryEast @boundarySouth @boundaryWest @conflicted @boundaryConflicted" id="box-@ID">
+    <div class="box
+         @given
+         @boundaryNorth @boundaryEast @boundarySouth @boundaryWest
+         @boundaryConflicted @conflicted" id="box-@ID">
         <div class="value">@Value</div>
         <div class="helper-value">@HelperValue</div>
         <div class="helpers">
