--- a/PuzzleBase.Components/wwwroot/scss/PuzzleTile.scss
+++ b/PuzzleBase.Components/wwwroot/scss/PuzzleTile.scss
@@ -9,6 +9,7 @@ $border-radius: 10px;
     flex-direction: column;
     width: 200px;
     height: 120px;
+    margin: 5px;
     background-color: $tile-color;
     border-radius: $border-radius;
     box-shadow: 0 0 5px 1px black;
