--- a/PuzzleBase.Web/wwwroot/scss/Index.scss
+++ b/PuzzleBase.Web/wwwroot/scss/Index.scss
@@ -11,4 +11,11 @@
         font-family: Cambria;
         margin-bottom: 100px;
     }
+
+    > .puzzles {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
