--- a/PuzzleBase.Web/wwwroot/scss/Index.scss
+++ b/PuzzleBase.Web/wwwroot/scss/Index.scss
@@ -1,7 +1,10 @@
-﻿.loading-gif {
+﻿$loading-width: 160px;
+$loading-height: 160px;
+
+.loading-gif {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: calc(50% - #{$loading-height} / 2);
+    left: calc(50% - #{$loading-width} / 2);
 }
 
 .index-page {
