--- a/PuzzleBase.Components/PuzzleBox.razor
+++ b/PuzzleBase.Components/PuzzleBox.razor
@@ -24,16 +24,23 @@
          @boundaryConflicted @conflicted" id="box-@ID">
         <div class="value">@Value</div>
         <div class="helper-value">@HelperValue</div>
-        <div class="helpers">
-            @for (var i = 1; i <= 9; ++i)
-            {
-                var digit = i;
+        <table class="helpers">
+            <tbody>
+                @for (var row = 0; row < 3; ++row)
+                {
+                    <tr>
+                        @for (var column = 0; column < 3; ++column)
+                        {
+                            var digit = row * 3 + column + 1;
 
-                <div class="helper" id="helper-@i"
-                     @onmouseover="() => Helper_MouseOver(digit)"
-                     @onmouseout="Helper_MouseOut"
-                     @onclick="() => Helper_Click(digit)"></div>
-            }
-        </div>
+                            <td class="helper" id="helper-@row"
+                                @onmouseover="() => Helper_MouseOver(digit)"
+                                @onmouseout="Helper_MouseOut"
+                                @onclick="() => Helper_Click(digit)"></td>
+                        }
+                    </tr>
+                }
+                </tbody>
+        </table>
     </div>
 </td>
