--- a/PuzzleBase.Components/wwwroot/scss/PuzzleComponent.scss
+++ b/PuzzleBase.Components/wwwroot/scss/PuzzleComponent.scss
@@ -15,7 +15,7 @@ $conflicted-color: red;
     box-shadow: 0 0 5px 1px black;
     user-select: none;
 
-    td {
+    > tbody > tr > td {
         padding: 0;
         margin: 0;
         width: $box-size;
@@ -53,19 +53,12 @@ $conflicted-color: red;
             }
 
             > .helpers {
-                display: flex;
                 position: absolute;
                 top: 0;
                 left: 0;
                 width: 100%;
                 height: 100%;
-                flex-direction: row;
-                flex-wrap: wrap;
-
-                > .helper {
-                    width: calc(#{$box-size} / 3 - 1px);
-                    height: calc(#{$box-size} / 3 - 1px);
-                }
+                border-collapse: collapse;
             }
 
             &.given {
