--- a/PuzzleBase.Components/wwwroot/scss/PuzzleComponent.scss
+++ b/PuzzleBase.Components/wwwroot/scss/PuzzleComponent.scss
@@ -11,112 +11,128 @@ $conflicted-color: red;
     position: absolute;
     top: calc(50% - #{$box-size} * 4.5);
     left: calc(50% - #{$box-size} * 4.5);
-    border: 2px solid black;
-    box-shadow: 0 0 5px 1px black;
     user-select: none;
+    box-shadow: 0 0 5px 1px black;
 
-    > tbody > tr > td {
-        padding: 0;
-        margin: 0;
-        width: $box-size;
-        height: $box-size;
-        min-width: $box-min-size;
-        min-height: $box-min-size;
+    > .puzzle-table {
+        border: 2px solid black;
 
-        > .box {
-            width: 100%;
-            height: 100%;
-            position: relative;
-            background-color: $box-color;
-            border: 1px solid black;
-            cursor: pointer;
-            transition: filter 0.1s ease, box-shadow 0.1s ease;
+        > tbody > tr > td {
+            padding: 0;
+            margin: 0;
+            width: $box-size;
+            height: $box-size;
+            min-width: $box-min-size;
+            min-height: $box-min-size;
 
-            > .value,
-            > .helper-value {
-                font-size: calc(#{$box-size} * 0.75);
-                position: absolute;
-                top: 0;
-                left: 0;
+            > .box {
                 width: 100%;
                 height: 100%;
-                text-align: center;
-                line-height: $box-size;
-            }
+                position: relative;
+                background-color: $box-color;
+                border: 1px solid black;
+                cursor: pointer;
+                transition: filter 0.1s ease, box-shadow 0.1s ease;
 
-            > .value {
-                color: $value-color;
-            }
+                > .value,
+                > .helper-value {
+                    font-size: calc(#{$box-size} * 0.75);
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    text-align: center;
+                    line-height: $box-size;
+                }
 
-            > .helper-value {
-                color: $helper-value-color;
-            }
+                > .value {
+                    color: $value-color;
+                }
 
-            > .helpers {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                border-collapse: collapse;
-            }
+                > .helper-value {
+                    color: $helper-value-color;
+                }
 
-            &.given {
-                &:not(.conflicted) {
-                    > .value {
-                        color: $given-color;
+                > .helpers {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    border-collapse: collapse;
+                }
+
+                &.given {
+                    &:not(.conflicted) {
+                        > .value {
+                            color: $given-color;
+                        }
+                    }
+
+                    &.conflicted {
+                        font-weight: bold;
                     }
                 }
 
                 &.conflicted {
-                    font-weight: bold;
+                    > .value {
+                        color: $conflicted-color;
+                    }
                 }
-            }
 
-            &.conflicted {
-                > .value {
-                    color: $conflicted-color;
-                }
-            }
-
-            &.boundary-north {
-                border-top: 2px solid black;
-            }
-
-            &.boundary-east {
-                border-right: 2px solid black;
-            }
-
-            &.boundary-south {
-                border-bottom: 2px solid black;
-            }
-
-            &.boundary-west {
-                border-left: 2px solid black;
-            }
-
-            &.boundary-conflicted {
                 &.boundary-north {
-                    border-top: 2px solid $conflicted-color;
+                    border-top: 2px solid black;
                 }
 
                 &.boundary-east {
-                    border-right: 2px solid $conflicted-color;
+                    border-right: 2px solid black;
                 }
 
                 &.boundary-south {
-                    border-bottom: 2px solid $conflicted-color;
+                    border-bottom: 2px solid black;
                 }
 
                 &.boundary-west {
-                    border-left: 2px solid $conflicted-color;
+                    border-left: 2px solid black;
+                }
+
+                &.boundary-conflicted {
+                    &.boundary-north {
+                        border-top: 2px solid $conflicted-color;
+                    }
+
+                    &.boundary-east {
+                        border-right: 2px solid $conflicted-color;
+                    }
+
+                    &.boundary-south {
+                        border-bottom: 2px solid $conflicted-color;
+                    }
+
+                    &.boundary-west {
+                        border-left: 2px solid $conflicted-color;
+                    }
+                }
+
+                &:hover {
+                    filter: brightness(1.25);
+                    box-shadow: inset 0 0 2px 1px black;
                 }
             }
+        }
+    }
 
-            &:hover {
-                filter: brightness(1.25);
-                box-shadow: inset 0 0 2px 1px black;
-            }
+    > .thermos {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        .thermo {
+            position: absolute;
+            background-color: rgba(black, 0.5);
         }
     }
 }
