--- a/PuzzleBase.Components/PuzzleComponent.razor
+++ b/PuzzleBase.Components/PuzzleComponent.razor
@@ -3,10 +3,10 @@
 <div class="puzzle">
     <table class="puzzle-table">
         <tbody>
-            @for (var row = 1; row <= 9; ++row)
+            @for (var row = 0; row < 9; ++row)
             {
                 <tr>
-                    @for (var column = 1; column <= 9; ++column)
+                    @for (var column = 0; column < 9; ++column)
                     {
                         <PuzzleBox Row="row" Column="column" />
                     }
