--- a/PuzzleBase.Web/Shared/MainLayout.razor
+++ b/PuzzleBase.Web/Shared/MainLayout.razor
@@ -6,7 +6,8 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="#" target="_blank">About</a>
+        <a href="#" target="_blank">Sign Up</a>
+        <a href="#" target="_blank">Sign In</a>
     </div>
 
     <div class="content px-4">
