Update DB scaffolding and add basic puzzle editing capabilities to logged-in users.

--- a/PuzzleBase.Components/PuzzleBox.razor
+++ b/PuzzleBase.Components/PuzzleBox.razor
@@ -44,7 +44,8 @@
                             <td class="helper" id="helper-@row"
                                 @onmouseover="() => Helper_MouseOver(digit)"
                                 @onmouseout="Helper_MouseOut"
-                                @onclick="() => Helper_Click(digit)"></td>
+                                @onclick="() => Helper_Click(digit)">
+                            </td>
                         }
                     </tr>
                 }
