--- a/PuzzleBase.Components/wwwroot/scss/_KillerCage.scss
+++ b/PuzzleBase.Components/wwwroot/scss/_KillerCage.scss
@@ -13,7 +13,7 @@
             top: 0;
             left: 0;
             font-family: Arial;
-            font-size: calc(#{$box-size} * 0.25);
+            font-size: calc(#{$box-min-size} * 0.25 + #{$box-size} * 0.1);
             font-weight: bold;
             line-height: normal;
             color: whitesmoke;
