--- a/PuzzleBase.Components/wwwroot/scss/_PuzzleComponent.scss
+++ b/PuzzleBase.Components/wwwroot/scss/_PuzzleComponent.scss
@@ -3,8 +3,9 @@
 
 .puzzle {
     position: absolute;
-    top: calc(50% - #{$box-size} * 4.5);
-    left: calc(50% - #{$box-size} * 4.5);
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
     user-select: none;
     box-shadow: 0 0 5px 1px black;
 
@@ -16,12 +17,12 @@
             margin: 0;
             width: $box-size;
             height: $box-size;
-            min-width: $box-min-size;
-            min-height: $box-min-size;
 
             > .box {
                 width: 100%;
                 height: 100%;
+                min-width: $box-min-size;
+                min-height: $box-min-size;
                 position: relative;
                 background-color: $box-color;
                 border: 1px solid black;
@@ -30,14 +31,17 @@
 
                 > .value,
                 > .helper-value {
-                    font-size: calc(#{$box-size} * 0.75);
+                    display: flex;
+                    justify-content: center;
+                    align-content: center;
+                    flex-direction: column;
+                    font-size: calc(#{$box-min-size} + (#{$box-size - $box-min-size}) * 0.5);
                     position: absolute;
                     top: 0;
                     left: 0;
                     width: 100%;
                     height: 100%;
                     text-align: center;
-                    line-height: $box-size;
                 }
 
                 > .value {
