--- a/PuzzleBase.Web/wwwroot/css/site.css
+++ b/PuzzleBase.Web/wwwroot/css/site.css
@@ -18,6 +18,7 @@ app {
     position: relative;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 .top-row {
@@ -34,6 +35,7 @@ app {
     background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
+    z-index: 9999;
 }
 
 .main .top-row > a {
@@ -42,6 +44,7 @@ app {
 
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    z-index: 9999;
 }
 
 .sidebar .top-row {
@@ -92,7 +95,9 @@ app {
 }
 
 .content {
-    padding-top: 1.1rem;
+    padding-top: 3.5rem;
+    position: relative;
+    height: calc(100% - 3.5rem);
 }
 
 .navbar-toggler {
@@ -112,8 +117,9 @@ app {
 }
 
 @media (max-width: 767.98px) {
-    .main .top-row {
-        display: none;
+    .main > div {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
@@ -146,5 +152,12 @@ app {
     .sidebar .collapse {
         /* Never collapse the sidebar for wide screens */
         display: block;
+    }
+}
+
+@media (min-width: 1200px) {
+    .content {
+        height: 0;
+        position: inherit;
     }
 }
