--- a/PuzzleBase.Components/PuzzleBox.razor
+++ b/PuzzleBase.Components/PuzzleBox.razor
@@ -24,14 +24,15 @@
          @boundaryConflicted @conflicted" id="box-@ID"
          @onkeypress="(e) => Box_KeyPress(e)" tabindex="0">
 
-        <div class="value">@Value</div>
+        <div class="value color-@ColorIndex">@Value</div>
 
         @if (KillerCageBoundary != CageBitmask.None)
         {
             <KillerCage Elements="KillerCageBoundary" ShowSum="ShowKillerSum" Sum="KillerSum" IsConflicted="IsKillerCageConflicted" />
         }
 
-        <div class="helper-value">@HelperValue</div>
+        <div class="helper-value color-@HelperColorIndex">@HelperValue</div>
+        <div class="helper-central">@CentralValue</div>
         <table class="helpers">
             <tbody>
                 @for (var row = 0; row < 3; ++row)
@@ -40,11 +41,13 @@
                         @for (var column = 0; column < 3; ++column)
                         {
                             var digit = row * 3 + column + 1;
+                            var cornerHelperValue = CornerHelpers[digit - 1] || CornerHelperHasFocus[digit - 1] ? (int?)digit : null;
 
-                            <td class="helper" id="helper-@row"
+                            <td class="helper"
                                 @onmouseover="() => Helper_MouseOver(digit)"
-                                @onmouseout="Helper_MouseOut"
+                                @onmouseout="() => Helper_MouseOut(digit)"
                                 @onclick="() => Helper_Click(digit)">
+                                <div class="value">@cornerHelperValue</div>
                             </td>
                         }
                     </tr>
