--- a/PuzzleBase.Components/wwwroot/scss/_PuzzleBox.scss
+++ b/PuzzleBase.Components/wwwroot/scss/_PuzzleBox.scss
@@ -40,7 +40,8 @@
             justify-content: center;
             align-content: center;
             flex-direction: column;
-            font-size: calc(#{$box-min-size} / 3 + (#{$box-size - $box-min-size}) * 0.5 / 3);
+            font-size: calc(#{$box-min-size} / 4 + (#{$box-size - $box-min-size}) * 0.5 / 4);
+            font-family: 'Times New Roman';
             position: absolute;
             top: 0;
             left: 0;
