--- a/PuzzleBase.Components/wwwroot/scss/_PuzzleOverlay.scss
+++ b/PuzzleBase.Components/wwwroot/scss/_PuzzleOverlay.scss
@@ -1,5 +1,8 @@
 ﻿.overlay {
-    width: 100%;
+    position: fixed;
+    top: calc(50vh - 15vh / 2);
+    left: 0;
+    width: 100vw;
     height: 15vh;
     background-color: rgba(black, 0.4);
     color: rgb(255, 216, 0);
@@ -8,4 +11,5 @@
     text-align: center;
     font-variant: small-caps;
     user-select: none;
+    z-index: 9999;
 }
